[gd_scene load_steps=6 format=2]

[ext_resource path="res://layout/grid/layout_cell.gd" type="Script" id=1]
[ext_resource path="res://layout/grid/layout_cell_shader.tres" type="Material" id=2]

[sub_resource type="ImageTexture" id=1]
size = Vector2( 64, 64 )

[sub_resource type="ImageTexture" id=3]
size = Vector2( 64, 64 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("RenderCacheViewport")

[node name="LayoutCell" type="Node2D"]
script = ExtResource( 1 )

[node name="RenderCacheViewport" type="SubViewport" parent="."]
size = Vector2( 64, 64 )
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 1
gui_disable_input = true

[node name="Render" type="Sprite2D" parent="RenderCacheViewport"]
material = ExtResource( 2 )
texture = SubResource( 1 )
centered = false

[node name="RenderDynamic" type="Sprite2D" parent="."]
material = ExtResource( 2 )
texture = SubResource( 3 )
centered = false

[node name="RenderCache" type="Sprite2D" parent="."]
visible = false
texture = SubResource( 2 )
centered = false
